# FS-IoT

./: .gitignore  CMakeLists.txt  README.md  kburstclassifier.txt  makeit.sh  old.txt  readme.md  resultDraw.ipynb
deprecated/: burstIoTLabs.cpp  burstIoTmain.cpp  byteIoTLabs.cpp  byteIoTmain.cpp  shahidLabs.cpp  shahidmain.cpp
include/: experiment.h  labSetting.h  pyModule.h
mappings/: IOTBEHAV2021_device_mac_mappings.csv  NEUKI2019_device_mac_mappings.csv  UNSW201620_device_mac_mappings.csv
pack/: CMakeLists.txt  oldgroupPolicy.txt
pack/header/: boClassifier.h  boost-serialize.h  burstClassifier.h  burstDataset.h  burstMaker.h  byteIoTClassifier.h  byteIoTDataset.h  common-utils.h  distance-utils.h  file-utils.h  kburst.h  kdevice.h  kpacket.h  packetDataset.h  pcpp-common.h  resultBundle.h  serialize-utils.h  shahidClassifier.h  shahidDataset.h  string-utils.h  time-utils.h  timer.h  types.h  utils-metric.h
pack/src/: boClassifier.cpp  burstClassifier.cpp  burstDataset.cpp  burstMaker.cpp  byteIoTClassifier.cpp  byteIoTDataset.cpp  kburst.cpp  kdevice.cpp  kpacket.cpp  packetDataset.cpp  shahidClassifier.cpp  shahidDataset.cpp
pythonDraw/: BurstNum.py  Entity.py  Scatter.py  ai-try.py  byteiot-train-acc-curve.py  classification.py  commonUtils.py  divMetric-curve.py  division.py  extractMetric.py  file_reader.py  labsetting_main.py  main-division.py  main-metric.py  plotBurst.py  plotCm.py  plotFewShots.py  post_processing.py  settingTemplates.py  train-acc-curve.py  utils.py  utils_plot.py
readme/: readme.zh_CN.md
src/: MLmain.cpp  burstIoTLabs.cpp  burstIoTmain.cpp  byteIoTLabs.cpp  byteIoTmain.cpp  experiment.cpp  labSetting.cpp  labSetting_bindings.cpp  main.cpp  postproc.cpp  shahidLabs.cpp  shahidmain.cpp  testBind.cpp  utils.cpp
test/: CMakeLists.txt  ikettle-serial.burstDataset  ikettle-serial.burstDataset.txt  test-boClassifier.cpp  test-burstClassifier.cpp  test-burstDataset.cpp  test-burstMaker.cpp  test-byteIoTClassifier.cpp  test-byteIoTDataset.cpp  test-kburst.cpp  test-kdevice.cpp  test-kpacket.cpp  test-metric.cpp  test-packetDataset.cpp  test-shahidClassifier.cpp  test-shahidDataset.cpp
